data_pipeline/k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: elderly-care
spec:
  selector:
    app: kafka
  ports:
  - port: 9092
    targetPort: 9092
  - port: 9093
    targetPort: 9093
  type: ClusterIP
